--- a/DanceCalc/m4d/ApplicationInsights.config
+++ b/DanceCalc/m4d/ApplicationInsights.config
@@ -1,41 +1,52 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ApplicationInsights xmlns="http://schemas.microsoft.com/ApplicationInsights/2013/Settings" schemaVersion="2014-05-30">
+<ApplicationInsights xmlns="http://schemas.microsoft.com/ApplicationInsights/2013/Settings">
   <InstrumentationKey>
     aada2f48-d93c-4778-a71f-7781952cc47b
   </InstrumentationKey>
-  <ContextInitializers>
-    <!-- 
-        Context initializers are responsible for populating environment-based properties on a new instance of TelemetryContext.
-        They are run once per instance of TelementryContext.
-    -->
-    <Add Type="Microsoft.ApplicationInsights.Platform.ComponentContextInitializer, Microsoft.ApplicationInsights.Platform"/>
-    <Add Type="Microsoft.ApplicationInsights.Platform.DeviceContextInitializer, Microsoft.ApplicationInsights.Platform"/>
-    <Add Type="Microsoft.ApplicationInsights.Platform.UserContextInitializer, Microsoft.ApplicationInsights.Platform"/>
-    <Add Type="Microsoft.ApplicationInsights.Platform.SessionContextInitializer, Microsoft.ApplicationInsights.Platform"/>
-    <Add Type="Microsoft.ApplicationInsights.Platform.AzureRoleEnvironmentContextInitializer, Microsoft.ApplicationInsights.Platform"/>
-  </ContextInitializers>
-  <TelemetryInitializers>
-    <!-- 
-        Telemetry initializers are responsible for populating per-telemetry item properties on a instance of ITelemetry.
-        They are run once per instance of ITelementry.
-    -->
-    <Add Type="Microsoft.ApplicationInsights.Core.TimestampPropertyInitializer, Microsoft.ApplicationInsights"/>
-    <Add Type="Microsoft.ApplicationInsights.Platform.NetBiosMachineNameTelemetryInitializer, Microsoft.ApplicationInsights.Platform"/>
-    <Add Type="Microsoft.ApplicationInsights.Platform.OperatingSystemTelemetryInitializer, Microsoft.ApplicationInsights.Platform"/>
-    <Add Type="Microsoft.ApplicationInsights.Platform.ProcessIdTelemetryInitializer, Microsoft.ApplicationInsights.Platform"/>
-    <Add Type="Microsoft.ApplicationInsights.Platform.ProcessNameTelemetryInitializer, Microsoft.ApplicationInsights.Platform"/>
-    <Add Type="Microsoft.ApplicationInsights.Platform.ThreadIdTelemetryInitializer, Microsoft.ApplicationInsights.Platform"/>
-    <Add Type="Microsoft.ApplicationInsights.Platform.ThreadLanguageTelemetryInitializer, Microsoft.ApplicationInsights.Platform"/>
-  </TelemetryInitializers>
-  <TelemetryChannel>
-    <!-- 
-        The telemetry channel section can be used to configure the behavior of the SDK with respect to sending data to 
-        the Application Insights service.
-    -->
-    <!--
-      DeveloperMode setting controls Application Insights SDK behavior to optimize for local debugging. 
-      This setting should be set to false before deploying your application.
-    -->
-    <DeveloperMode>true</DeveloperMode>
-  </TelemetryChannel>
+<!-- 
+    Learn more about Application Insights configuration with ApplicationInsights.config here: 
+    http://go.microsoft.com/fwlink/?LinkID=513840
+    
+    Note: If not present, please add <InstrumentationKey>Your Key</InstrumentationKey> to the top of this file.
+  -->
+<TelemetryModules>
+<Add Type="Microsoft.ApplicationInsights.Extensibility.Implementation.Tracing.DiagnosticsTelemetryModule, Microsoft.ApplicationInsights"/>
+<Add Type="Microsoft.ApplicationInsights.Extensibility.RuntimeTelemetry.RemoteDependencyModule, Microsoft.ApplicationInsights.Extensibility.RuntimeTelemetry"/>
+<Add Type="Microsoft.ApplicationInsights.Extensibility.PerfCollector.PerformanceCollectorModule, Microsoft.ApplicationInsights.Extensibility.PerfCollector">
+<!--
+      Use the following syntax here to collect additional performance counters:
+      
+      <Counters>
+        <Add PerformanceCounter="\Process(??APP_WIN32_PROC??)\Handle Count" ReportAs="Process handle count" />
+        ...
+      </Counters>
+      
+      PerformanceCounter must be either \CategoryName(InstanceName)\CounterName or \CategoryName\CounterName
+      
+      Counter names may only contain letters, round brackets, forward slashes, hyphens, underscores, spaces and dots.
+      You may provide an optional ReportAs attribute which will be used as the metric name when reporting counter data.
+      For the purposes of reporting, metric names will be sanitized by removing all invalid characters from the resulting metric name.
+      
+      The following placeholders are supported as InstanceName:
+        ??APP_WIN32_PROC?? - instance name of the application process  for Win32 counters.
+        ??APP_W3SVC_PROC?? - instance name of the application IIS worker process for IIS/ASP.NET counters.
+        ??APP_CLR_PROC?? - instance name of the application CLR process for .NET counters.
+      -->
+</Add>
+<Add Type="Microsoft.ApplicationInsights.Extensibility.Web.TelemetryModules.WebApplicationLifecycleModule, Microsoft.ApplicationInsights.Extensibility.Web"/>
+<Add Type="Microsoft.ApplicationInsights.Extensibility.Web.TelemetryModules.WebRequestTrackingTelemetryModule, Microsoft.ApplicationInsights.Extensibility.Web"/>
+<Add Type="Microsoft.ApplicationInsights.Extensibility.Web.TelemetryModules.WebExceptionTrackingTelemetryModule, Microsoft.ApplicationInsights.Extensibility.Web"/>
+</TelemetryModules>
+<ContextInitializers>
+<Add Type="Microsoft.ApplicationInsights.Extensibility.BuildInfoConfigComponentVersionContextInitializer, Microsoft.ApplicationInsights"/>
+<Add Type="Microsoft.ApplicationInsights.Extensibility.DeviceContextInitializer, Microsoft.ApplicationInsights"/>
+<Add Type="Microsoft.ApplicationInsights.Extensibility.Web.ContextInitializers.AzureRoleEnvironmentContextInitializer, Microsoft.ApplicationInsights.Extensibility.Web"/>
+<Add Type="Microsoft.ApplicationInsights.Extensibility.Web.ContextInitializers.DomainNameRoleInstanceContextInitializer, Microsoft.ApplicationInsights.Extensibility.Web"/>
+</ContextInitializers>
+<TelemetryInitializers>
+<Add Type="Microsoft.ApplicationInsights.Extensibility.Web.TelemetryInitializers.WebClientIpHeaderTelemetryInitializer, Microsoft.ApplicationInsights.Extensibility.Web"/>
+<Add Type="Microsoft.ApplicationInsights.Extensibility.Web.TelemetryInitializers.WebUserAgentTelemetryInitializer, Microsoft.ApplicationInsights.Extensibility.Web"/>
+<Add Type="Microsoft.ApplicationInsights.Extensibility.Web.TelemetryInitializers.WebOperationNameTelemetryInitializer, Microsoft.ApplicationInsights.Extensibility.Web"/>
+<Add Type="Microsoft.ApplicationInsights.Extensibility.Web.TelemetryInitializers.WebOperationIdTelemetryInitializer, Microsoft.ApplicationInsights.Extensibility.Web"/>
+</TelemetryInitializers>
 </ApplicationInsights>
