--- a/DanceCalc/m4d/packages.config
+++ b/DanceCalc/m4d/packages.config
@@ -25,8 +25,11 @@
   <package id="Knockout.Mapping" version="2.4.0" targetFramework="net45" />
   <package id="knockoutjs" version="3.3.0" targetFramework="net45" />
   <package id="MarkdownDeep.Full" version="1.5" targetFramework="net45" />
-  <package id="Microsoft.ApplicationInsights" version="0.9.0-build06428" targetFramework="net45" />
-  <package id="Microsoft.ApplicationInsights.Web" version="0.9.0-build06428" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights" version="0.14.0-build20632" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="0.14.0-build08008" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.PerformanceCollector" version="0.14.0-build20632" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.RuntimeTelemetry" version="0.14.0-build20632" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.Web" version="0.14.0-build20632" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.0" targetFramework="net45" />
@@ -41,6 +44,7 @@
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net45" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
+  <package id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="1.1.16-beta" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net45" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" />
