--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -426,6 +426,7 @@
     <Compile Include="Utilities\SongBinder.cs" />
     <Compile Include="Utilities\XboxAuthentication.cs" />
     <Compile Include="ViewModels\AlbumViewModel.cs" />
+    <Compile Include="ViewModels\DanceClass.cs" />
     <Compile Include="ViewModels\ManageViewModels.cs" />
     <Compile Include="ViewModels\ServiceSearchResults.cs" />
     <Compile Include="ViewModels\AccountViewModels.cs" />
@@ -436,6 +437,7 @@
     <Content Include="Content\ajax-loader.gif" />
     <Content Include="Content\amazon-charm.png" />
     <Content Include="Content\amazon-logo.png" />
+    <Content Include="Content\ballroom.png" />
     <Content Include="Content\BlackBanner.png" />
     <Content Include="Content\blue-help.png" />
     <Content Include="Content\bootstrap-theme.css" />
@@ -458,13 +460,17 @@
     <Content Include="Content\itunes-logo.png" />
     <Content Include="Content\jquery.nouislider.css" />
     <Content Include="Content\jquery.nouislider.pips.css" />
+    <Content Include="Content\Music4DanceBannerColor.png" />
     <Content Include="Content\orange-bootstrap-min.css" />
     <Content Include="Content\orange-bootstrap-theme.css" />
     <Content Include="Content\orange-bootstrap.css" />
     <Content Include="Content\PagedList.css" />
     <Content Include="Content\playbutton.png" />
+    <Content Include="Content\salsa.png" />
     <Content Include="Content\spotify-charm.png" />
     <Content Include="Content\spotify-logo.png" />
+    <Content Include="Content\swing.png" />
+    <Content Include="Content\tango.png" />
     <Content Include="Content\teal-bootstrap-min.css" />
     <Content Include="Content\teal-bootstrap-theme.css" />
     <Content Include="Content\teal-bootstrap.css" />
