--- a/DanceCalc/packages/repositories.config
+++ b/DanceCalc/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Contract\packages.config" />
+  <repository path="..\Crawler\packages.config" />
   <repository path="..\DanceLib\packages.config" />
   <repository path="..\DanceUtilities\packages.config" />
   <repository path="..\m4d.Tests\packages.config" />
