--- a/DanceCalc/m4dModels/m4dModels.csproj
+++ b/DanceCalc/m4dModels/m4dModels.csproj
@@ -114,11 +114,13 @@
     <Compile Include="SongMerge.cs" />
     <Compile Include="SongProperty.cs" />
     <Compile Include="AlbumTrack.cs" />
+    <Compile Include="TagAccumulator.cs" />
     <Compile Include="TagCount.cs" />
     <Compile Include="TaggableObject.cs" />
     <Compile Include="TagList.cs" />
     <Compile Include="TagSummary.cs" />
     <Compile Include="TagType.cs" />
+    <Compile Include="TopN.cs" />
     <Compile Include="TraceLevels.cs" />
     <Compile Include="TrackNumber.cs" />
     <Compile Include="UndoAction.cs" />
