--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -652,6 +652,7 @@
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\showdance.js" />
     <Content Include="Scripts\SongIndex.js" />
+    <Content Include="Scripts\TagCloud.js" />
     <Content Include="Scripts\Tempi.js" />
     <Content Include="Scripts\undo.js" />
     <Content Include="Scripts\_references.js" />
