SendGrid password update

--- a/DanceCalc/m4d/Web.config
+++ b/DanceCalc/m4d/Web.config
@@ -43,7 +43,7 @@ Sample binding in application.config for iisexpress
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     <add key="mailAccount" value="music4dance"/>
-    <add key="mailPassword" value="abHAbRSs_ttLqpj0"/>
+    <add key="mailPassword" value="TX9ES3D0cTDzCeP"/>
   </appSettings>
   <system.web>
     <authentication mode="None"/>
