--- a/DanceCalc/m4d/Web.config
+++ b/DanceCalc/m4d/Web.config
@@ -30,8 +30,9 @@ Sample binding in application.config for iisexpress
       
     <section name="core" type="JavaScriptEngineSwitcher.Core.Configuration.CoreConfiguration, JavaScriptEngineSwitcher.Core"/><section name="msie"
       type="JavaScriptEngineSwitcher.Msie.Configuration.MsieConfiguration, JavaScriptEngineSwitcher.Msie"/></sectionGroup>
-    <section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core"/>
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <!--<section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core"/> -->
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="DefaultConnection"
       connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-m4d-20140305044409.mdf;Initial Catalog=aspnet-m4d-20140305044409;Integrated Security=True"
@@ -63,20 +64,20 @@ Sample binding in application.config for iisexpress
         <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false"/> -->
     <httpModules>
 
-      <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet"/>
+      <!--<add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet"/>-->
       <add name="ApplicationInsightsWebTracking"
         type="Microsoft.ApplicationInsights.Extensibility.Web.RequestTracking.WebRequestTrackingModule, Microsoft.ApplicationInsights.Extensibility.Web"/>
     </httpModules>
 
-    <httpHandlers>
+    <!--<httpHandlers>
       <add path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet"/>
-    </httpHandlers>
+    </httpHandlers>-->
   </system.web>
   <system.webServer>
     <modules>
       <remove name="FormsAuthenticationModule"/>
 
-      <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode"/>
+      <!--<add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode"/>-->
       <remove name="ApplicationInsightsWebTracking"/>
       <add name="ApplicationInsightsWebTracking"
         type="Microsoft.ApplicationInsights.Extensibility.Web.RequestTracking.WebRequestTrackingModule, Microsoft.ApplicationInsights.Extensibility.Web"
@@ -97,7 +98,7 @@ Sample binding in application.config for iisexpress
     </staticContent>
 
     <handlers>      
-    <add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode"/>
+    <!--<add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode"/>-->
     <add name="LessAssetHandler" path="*.less" verb="GET" type="BundleTransformer.Less.HttpHandlers.LessAssetHandler, BundleTransformer.Less"
         resourceType="File" preCondition=""/><remove name="ExtensionlessUrlHandler-Integrated-4.0"/><remove name="OPTIONSVerbHandler"/><remove name="TRACEVerbHandler"/><add name="ExtensionlessUrlHandler-Integrated-4.0"
         path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0"/></handlers>
@@ -312,10 +313,7 @@ Sample binding in application.config for iisexpress
         bindingConfiguration="AWSECommerceServiceBinding10" contract="AWSReference.AWSECommerceServicePortType" name="AWSECommerceServicePortUS"/>
     </client>
   </system.serviceModel>
-  <glimpse defaultRuntimePolicy="On" endpointBaseUri="~/Glimpse.axd">
-    <!-- 
-          For more information on how to configure Glimpse, please visit http://getglimpse.com/Help/Configuration
-          or access {your site}/Glimpse.axd for even more details and a Configuration Tool to support you. -->
+  <!--<glimpse defaultRuntimePolicy="On" endpointBaseUri="~/Glimpse.axd">
     <runtimePolicies>
       <ignoredTypes>
         <add type="Glimpse.AspNet.Policy.LocalPolicy, Glimpse.AspNet"/>
@@ -324,13 +322,7 @@ Sample binding in application.config for iisexpress
         <add regex=".*/admin.*"/>
       </uris>
     </runtimePolicies>
-    <!--<logging level="Trace" />-->
-
-    <!-- 
-          For more information on how to configure Glimpse, please visit http://getglimpse.com/Help/Configuration
-          or access {your site}/Glimpse.axd for even more details and a Configuration Tool to support you. 
-      -->
-  </glimpse>
+  </glimpse>-->
   <bundleTransformer xmlns="http://tempuri.org/BundleTransformer.Configuration.xsd">
     <core>
       <css defaultMinifier="MicrosoftAjaxCssMinifier">
