--- a/DanceCalc/m4d/Views/Web.config
+++ b/DanceCalc/m4d/Views/Web.config
@@ -18,6 +18,7 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="m4d" />
+        <add namespace="m4dModels"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
