--- a/DanceCalc/m4dModels/m4dModels.csproj
+++ b/DanceCalc/m4dModels/m4dModels.csproj
@@ -71,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdminMonitor.cs" />
+    <Compile Include="AdminTaskException.cs" />
     <Compile Include="AlbumDetails.cs" />
     <Compile Include="AmazonService.cs" />
     <Compile Include="ApplicationUser.cs" />
